# Osing

./: .gitignore  README.md  config.json  config.json.example  install.sh  logging.yaml  proxy_users.db  pyproject.toml  release.sh  todo.md
src/: gen_passwd_hash.py  main.py  serve.py  test.py
src/Authenticator/: __init__.py  auth.py
src/Checker/: __init__.py  checker.py
src/Client/: ConfigEngine.py  __init__.py  manager.py  update.py
src/Node/: Manager.py  __init__.py  client.py  service.py
src/Osing.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/Service/: __init__.py  serviceManager.py
src/Settings/: __init__.py
src/database/: __init__.py  redis.py  sqlite.py
src/osing.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/user_manager/: __init__.py  base.jsonc  dev.md  manager.py  server_config.json
templates/: base.jsonc  ios.jsonc  server.json
test/: conftest.py  test_transfer.py
test/Node/: test_service.py
test/Service/: test_serviceManager.py
test/intergration/: test_userManager.py
test/unit/: test_reload.py
test/unit/user_manager/: test_manager.py
test/unit/user_manager/database/: test_sqlite.py
