[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pypinyin>=0.55.0 ",
    "jstyleson",
    "pydbus",
    "pytest>=9.0.2",
    "rich",
    "aioconsole>=0.8.2",
    "fastapi>=0.136.1",
    "uvicorn>=0.47.0",
    "pyyaml>=6.0.3",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
